# superlu

./: .gitignore  .travis.yml  202004061021.py  CMakeLists.txt  DoxyConfig  Doxyfile.in  Makefile  README  README.md  XSDKDefaults.cmake  external_blas.patch  fpm.toml  make.inc  make.inc.in  superlu.pc.in
.github/workflows/: test.yml
CBLAS/: CMakeLists.txt  caxpy.c  ccopy.c  cdotc.c  cgemv.c  cgerc.c  chemv.c  cher2.c  complex_to_singlecomplex.patch  cscal.c  cswap.c  ctrsv.c  dasum.c  daxpy.c  dcabs1.c  dcopy.c  ddot.c  dgemv.c  dger.c  dnrm2.c  drot.c  dscal.c  dswap.c  dsymv.c  dsyr2.c  dtrsv.c  dzasum.c  dznrm2.c  f2c.h  icamax.c  idamax.c  isamax.c  izamax.c  sasum.c  saxpy.c  scasum.c  scnrm2.c  scopy.c  sdot.c  sgemv.c  (+20 more)
DOC/: CMakeLists.txt  mainpage.txt  modules.txt
DOC/html/: EXAMPLE_2sp__ienv_8c.html  SRC_2sp__ienv_8c.html  annotated.html  ccolumn__bmod_8c.html  ccolumn__dfs_8c.html  ccopy__to__ucol_8c.html  cdiagonal_8c.html  cfgmr_8c.html  cgscon_8c.html  cgsequ_8c.html  cgsisx_8c.html  cgsitrf_8c.html  cgsrfs_8c.html  cgssv_8c.html  cgssvx_8c.html  cgstrf_8c.html  cgstrs_8c.html  citersol1_8c.html  citersol_8c.html  clacon_8c.html  clangs_8c.html  claqgs_8c.html  cldperm_8c.html  clinsol1_8c.html  clinsol_8c.html  clinsolx1_8c.html  clinsolx2_8c.html  clinsolx_8c.html  cmemory_8c.html  cmyblas2_8c.html  colamd_8c.html  colamd_8h.html  cpanel__bmod_8c.html  cpanel__dfs_8c.html  cpivotL_8c.html  cpivotgrowth_8c.html  cpruneL_8c.html  creadhb_8c.html  creadrb_8c.html  creadtriple_8c.html  (+215 more)
EXAMPLE/: CMakeLists.txt  CMakelists.txt  Makefile  README  cfgmr.c  citersol.c  citersol1.c  clinsol.c  clinsol1.c  clinsolx.c  clinsolx1.c  clinsolx2.c  clinsolx3.c  dfgmr.c  ditersol.c  ditersol1.c  dlinsol.c  dlinsol1.c  dlinsolx.c  dlinsolx1.c  dlinsolx2.c  dlinsolx3.c  dreadtriple_noheader.c  fgmr.c  sfgmr.c  sitersol.c  sitersol1.c  slinsol.c  slinsol1.c  slinsolx.c  slinsolx1.c  slinsolx2.c  slinsolx3.c  sp_ienv.c  superlu.c  zfgmr.c  zitersol.c  zitersol1.c  zlinsol.c  zlinsol1.c  (+4 more)
FORTRAN/: CMakeLists.txt  CMakelists.txt  Makefile  README  c_fortran_cgssv.c  c_fortran_dgssv.c  c_fortran_sgssv.c  c_fortran_zgssv.c  f_main.F90  hbcode1.F90  superlu_config.fh  tslu_omp.F  z_f_main.F90  zhbcode1.F90
INSTALL/: dlamch.c  dmach.c  lsame.c  slamch.c  smach.c  timertst.c
MAKE_INC/: make.cray_xc30  make.cray_xe6  make.linux  make.mac-x  make.scg1  make.travis
MATLAB/: CMakeLists.txt  hbo.m  mexlusolve.c  mexsuperlu.c  superlu.m
SRC/: CMakeLists.txt  Makefile  ccolumn_bmod.c  ccolumn_dfs.c  ccopy_to_ucol.c  cdiagonal.c  cgscon.c  cgsequ.c  cgsisx.c  cgsitrf.c  cgsrfs.c  cgssv.c  cgssvx.c  cgstrf.c  cgstrs.c  clacon.c  clacon2.c  clangs.c  claqgs.c  cldperm.c  cmemory.c  cmyblas2.c  colamd.c  colamd.h  cpanel_bmod.c  cpanel_dfs.c  cpivotL.c  cpivotgrowth.c  cpruneL.c  creadMM.c  creadhb.c  creadrb.c  creadtriple.c  csnode_bmod.c  csnode_dfs.c  csp_blas2.c  cutil.c  dGetDiagU.c  dcolumn_bmod.c  dcolumn_dfs.c  (+152 more)
TESTING/: CMakeLists.txt  cdrive.c  cgst01.c  cgst02.c  cgst04.c  cgst07.c  core  ddrive.c  dgst01.c  dgst02.c  dgst04.c  dgst07.c  runtest.cmake  sdrive.c  sgst01.c  sgst02.c  sgst04.c  sgst07.c  sp_cconvert.c  sp_dconvert.c  sp_ienv.c  sp_sconvert.c  sp_zconvert.c  zdrive.c  zgst01.c  zgst02.c  zgst04.c  zgst07.c
TESTING/MATGEN/: CMakeLists.txt  Makefile  cdotc.c  clacgv.c  clagge.c  claghe.c  clagsy.c  clarge.c  clarnd.c  clarnv.c  claror.c  clarot.c  clartg.c  claset.c  clatb4.c  clatm2.c  clatm3.c  clatme.c  clatmr.c  clatms.c  csymv.c  d_lg10.c  d_sign.c  dlabad.c  dlagge.c  dlagsy.c  dlaran.c  dlarge.c  dlarnd.c  dlarnv.c  dlaror.c  dlarot.c  dlartg.c  dlaruv.c  dlaset.c  dlatb4.c  dlatm1.c  dlatm2.c  dlatm3.c  dlatme.c  (+48 more)
cmake/: FindGetOpt.cmake  FindWinGetOpt.cmake
test_drivers/: mpi_override_blas_shared_libs.sh  mpi_override_blas_static_libs.sh  run_all_builds.sh  serial_default_blas_shared_libs.sh  serial_default_blas_static_libs.sh  serial_internal_cblas_shared_libs.sh  serial_internal_cblas_static_libs.sh  serial_override_blas_shared_libs.sh  serial_override_blas_static_libs.sh
